# neural_networks

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  setup.cfg
docs/: conf.py  index.rst  modules.rst  rep.rst  tp3_pkg.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  rep.doctree  tp3_pkg.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rep.html  search.html  searchindex.js  tp3_pkg.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tp3_pkg/: neurones.html  neurones_keras.html
docs/_build/markdown/: index.md  modules.md  tp3_pkg.md
tp3_pkg/: __init__.py  __main__.py  neurones.py  neurones_keras.py
