[metadata]
name = Tp3_db_mt
# Utilise l'attribut tp3_pkg.__version__ pour la version
version = attr: tp3_pkg.__version__
description = Our tp2 package.
# Utilise le contenu du fichier README pour la description
long_description = file: README
long_description_content_type = text/x-rst
author = Dimitri Buffat, Matthieu Thomeer
author_email = dimitri.buffat@etu.univ-lyon1.fr, matthieu.thomeer@etu.univ-lyon1.fr
license = BSD 3-Clause "New" or "Revised" License
license_files = LICENSE
classifiers =
    # Voir https://pypi.org/classifiers/
    # How mature is this project?
    Development Status :: 1 - Planning
    # Indicate who your project is intended for
    Intended Audience :: Education
    # License (should match "license" above)
    License :: OSI Approved :: BSD License
    # Specify the Python versions you support.
    Programming Language :: Python :: 3.9
    # Keywords
    Topic :: Education

[options]
zip_safe = False
include_package_data = False
# Trouver les (sous-)packages automagiquement!
packages = find:
# Exigence sur la version Python
python_requires = >=3.6

[options.entry_points]
console_scripts =
    # le script myscript correspond à la fonction main()
    # du fichier tp3_pkg/__main__.py
    NeuralNumpy = tp3_pkg.__main__:main_neural_numpy
    NeuralKeras = tp3_pkg.__main__:main_neural_keras
    Keras1 = tp3_pkg.__main__:main_train1
    Keras2 = tp3_pkg.__main__:main_train2
    Keras3 = tp3_pkg.__main__:main_train3
    Keras4 = tp3_pkg.__main__:main_train4
    Keras5 = tp3_pkg.__main__:main_train5
    
